# rl_unscrew

./: .gitignore  CMakeLists.txt  README.md  Readme.txt  dependencies.txt  package.xml  requirements.txt  setup.py
CAD/: CompleteToolAssembly.stl  CylinderScrew.stl  CylinderScrewBlock.stl  DrillAndMountAssembly.stl  ForceTorqueWithMount.stl  M3x12Screw.stl  MakitaDrill.stl  MakitaMount.stl  ScrewBlock.stl  ScrewDriverBitStar.stl  ScrewdriverBit(PZ2).stl  block.stl  cylinder_screw.STL  top_plate_1x1-perforated_m6.stl  top_plate_1x1-ur5-10.stl
CompleteToolAssembly/: manifest.xml
DrillAndMountAssembly/: manifest.xml
ForceTorqueWithMount/: manifest.xml
M3x12Screw/: manifest.xml
ScrewBlock/: manifest.xml
launch/: ur5.launch  (+1 more)
rl_gazebo_sim/: CMakeLists.txt  package.xml
rl_gazebo_sim/controller/: arm_controller_ur5.yaml  ur5_controller.yaml
rl_gazebo_sim/launch/: rl_wold.launch  rl_world.launch  ur5.launch  work_piece.launch
rl_gazebo_sim/meshes/: ForceTorqueWithMount.STL  M3x12Screw.STL  ScrewBlock.STL  ScrewDriverBitStar.STL  ScrewdriverBit(PZ2).STL
rl_gazebo_sim/parts_descriptions/meshes/: CompleteToolAssembly.STL  drill.STL  screw.STL
rl_gazebo_sim/parts_descriptions/screw_tool/: drill.urdf  ft_sensor.urdf  screw_tool.urdf.xacro
rl_gazebo_sim/parts_descriptions/tables/: model.sdf
rl_gazebo_sim/parts_descriptions/urdf/: CompleteToolAssembly.urdf  DrillAndMountAssembly.urdf  M3x12Screw.urdf  ScrewDriverBit.urdf  ScrewDriverBitStar.urdf  ScrewdriverBit(PZ2).urdf  drill.urdf  ft_sensor.urdf
rl_gazebo_sim/parts_descriptions/work_piece/: model.sdf
rl_gazebo_sim/screw_block/: model.config  model.sdf  screw.stl
rl_gazebo_sim/screw_tool/: manifest.xml  screw_tool.urdf.xacro
rl_gazebo_sim/screw_tool/meshes/: screw_tool.STL
rl_gazebo_sim/srv/: reset_robot.py
rl_gazebo_sim/tables/: model.config  model.sdf
rl_gazebo_sim/ur5_robot_w_tool/: ur5_controller.yaml  ur5_robot_w_tool.urdf  ur5_robot_w_tool.urdf.xacro
rl_gazebo_sim/urdf/: CompleteToolAssembly.urdf  DrillAndMountAssembly.urdf  ForceTorqueWithMount.urdf  ScrewDriverBitStar.urdf
rl_gazebo_sim/work_piece/: model.config  model.sdf  work_piece.sdf  work_piece.urdf.xacro  work_piece.world
rl_gazebo_sim/worlds/: simple.world  work_piece.world
(+79 files in other folders)
